--- a/src/components/FooterSetcion/SkillBridge/SkillBridge.module.css
+++ b/src/components/FooterSetcion/SkillBridge/SkillBridge.module.css
@@ -5,7 +5,7 @@ font-weight: 400;
 line-height: 21px;
 text-align: center;
 color: #656567;
-margin-top: 20px;
+margin-bottom: 24px;
 }
 @media (min-width: 1440px) {
     .text{
